# kidfile

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
kidfile/: Cargo.toml
kidfile-explorer/: Cargo.toml
kidfile-explorer/src/: batch_decode.rs  complex_path.rs  data_view.rs  main.rs
kidfile/src/: byte_iter.rs  byte_slice.rs  file_data.rs  image.rs  lib.rs
kidfile/src/archive_formats/: afs.rs  concat2k.rs  infdatabin.rs  lnk.rs  mod.rs
kidfile/src/data_formats/: cps.rs  cps_pc.rs  lzss.rs  lzss_be.rs  lzss_dc.rs  lzssbe.rs  mod.rs
kidfile/src/image_formats/: bip.rs  common_image.rs  gim.rs  klz.rs  mod.rs  ogdt.rs  prt.rs  pvr.rs  tim.rs  tim2.rs
