[package]
name = "kidfile-explorer"
version = "0.2.0"
edition = "2024"

[dependencies]
kidfile = {path = "../kidfile"}
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = {version = "0.31.1", features = ["svg"]}
egui_dock = "0.16.0"
chrono = "0.4.40"
rfd = "0.15.2"
directories = "6.0.0"
serde_json = "1.0.140"
lexical-sort = "0.3.1"
num_cpus = "1.16.0"
image = "0.25.5"