[package]
name = "kidfile"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
phf = {version = "0.11.3", features = ["macros"]}
tim2 = {path = "../tim2-rs/lib"}
image = "0.25.5"
png = "0.17.16"
bytemuck = "1.22.0"
zune-inflate = "0.2.54"
pulp = {version = "0.21.4", features = ["macro"]}
paste = "1.0.15"
